[package]
name = "zk-rollup"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ed-on-bls12-381 = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "crh", "merkle_tree"] }
ark-r1cs-std = "0.4.0"
ark-relations = "0.4.0"
ark-std = { version = "0.3.0", features = ["std"] }
ark-groth16 = "0.4.0"
ark-snark = "0.4.0"
rand = "0.8"

[dev-dependencies]
ark-std = { version = "0.3.0", features = ["std"] }
